# BMI-vulnscan-pro

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dvwa.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
tests/: conftest.py  test_crawler.py  test_headers.py  test_main_and_misc.py  test_modules_extra.py  test_sqli.py  test_xss.py
vulnscan/: __init__.py  main.py
vulnscan/core/: __init__.py  base_scanner.py  http_client.py  payload_engine.py  proxy_router.py  rate_limiter.py  session_manager.py
vulnscan/models/: __init__.py  enums.py  finding.py  scan_result.py
vulnscan/modules/: __init__.py  cors_checker.py  dir_bruteforce.py  header_analyzer.py  open_redirect.py  port_scanner.py  sql_injection.py  ssl_analyzer.py  xss_scanner.py
vulnscan/reporting/: html_reporter.py  json_reporter.py
vulnscan/reporting/templates/: report.html.j2
vulnscan/storage/: __init__.py  db.py  scan_logger.py
vulnscan/utils/: __init__.py  crawler.py  form_utils.py  logger.py  url_utils.py
vulnscan/web/: __init__.py  app.py  telegram.py
vulnscan/web/static/: app.js  pages.css  style.css
vulnscan/web/templates/: about.html  contact.html  home.html  index.html  services.html
vulnscan/wordlists/: dirs.txt  sqli_payloads.txt  xss_payloads.txt
